Fix scenario event default tab filtering and improve data field and MSEL list UX
  - Fix scenario event edit dialog not showing Default tab by passing
    showScenarioEventType flag when opening the dialog
  - Fix Default tab not filtering data fields by using sortedDataFields
    instead of getScenarioTypeDataFields() in the template
  - Add Default and Devs columns to the data fields table after Facil
  - Set column widths: checkbox columns to 50px, Name/DataType/Options
    min-width 60px, Integration min-width 236px
  - Reorder data field edit dialog checkboxes to match table column order
  - Default MSEL list to All MSELs for users with ViewMsels permission
  - Add HH:mm to Date Created and Date Modified on the MSEL list table
  - Simplify Join button text to just "Join"

--- a/src/app/components/data-field-list/data-field-list.component.scss
+++ b/src/app/components/data-field-list/data-field-list.component.scss
@@ -62,7 +62,7 @@ mat-table {
 }
 
 .column-display {
-  flex: 0 0 70px;
+  flex: 0 0 50px;
   display: flex;
   justify-content: center;
   align-items: center;
@@ -70,6 +70,7 @@ mat-table {
 
 .column-name {
   flex: 0 0 20%;
+  min-width: 60px;
   display: flex;
   align-items: center;
   padding: 1%;
@@ -196,6 +197,14 @@ mat-table {
 
 .integration-header {
   text-align: left;
+}
+
+.column-min60 {
+  min-width: 60px;
+}
+
+.column-integration {
+  min-width: 236px;
 }
 
 .integration {
